Justified About text

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		</div>
 		<div class="row">
 			<h1 class="heading-1 text-xs-center">About</h1>
-			<div id="bio" class="col-sm-6">
+			<div id="bio" class="col-sm-6 text-justify">
 				<p>Sharon Ford lives in the beautiful Napa Valley. She grew up in Southern California, and migrated to Northern California when her daughter was in elementary school. Sharon found Napa to be the perfect place to raise her child, and make lasting business connections in the Bay Area (..and the wine isn't half bad either!). Always seeking more knowledge, she set out on a journey to become a Notary Public. She has kept up with the classes throughout the years, and is now available to offer her services to anyone in the Greater Bay Area. Has pen, will travel.</p>
 			</div>
-			<div class="history col-sm-6">
+			<div class="history col-sm-6 text-justify">
 				<p>With over 40 years in the insurance industry under her belt, Sharon is a leader in her field. Her vast knowlege of the industry led her to pursuing a credential as a Notary Public. She has used her Notary credential in many different situations. If you are interested in a traveling notary, please click the contact button at the top of this page, or follow this link. </p>
 			</div>
 		</div>
